Fix destinations display when field content is too long

--- a/app/assets/stylesheets/destinations.css.scss
+++ b/app/assets/stylesheets/destinations.css.scss
@@ -110,6 +110,9 @@
     table td {
       line-height: 9px;
       padding: 0;
+      span {
+        height: auto;
+      }
     }
 
     .tablesorter-header-inner {
